--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@devexpress/dx-react-chart": "^3.0.6",
+    "@devexpress/dx-react-chart-material-ui": "^3.0.6",
+    "@devexpress/dx-react-core": "^4.0.3",
+    "@devexpress/dx-react-grid": "^4.0.3",
+    "@devexpress/dx-react-grid-material-ui": "^4.0.3",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@material-ui/core": "^4.12.4",
@@ -18,14 +23,19 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.2",
     "dayjs": "^1.11.7",
+    "devextreme": "22.2.4",
+    "devextreme-react": "22.2.4",
     "material-ui-search-bar": "^1.0.0",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.40",
+    "package.json": "^2.0.1",
     "react": "^18.2.0",
     "react-datetime-picker": "^4.2.0",
     "react-dom": "^18.2.0",
+    "react-material-file-upload": "^0.0.4",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
+    "recharts": "^2.4.3",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
