--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,23 +13,27 @@
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@material-ui/lab": "^4.0.0-alpha.61",
+    "@material-ui/pickers": "^3.3.10",
     "@mui/icons-material": "^5.11.0",
-    "@mui/material": "^5.11.6",
+    "@mui/material": "^5.11.13",
     "@mui/styled-engine-sc": "^5.11.0",
-    "@mui/x-date-pickers": "^5.0.16",
-    "@syncfusion/ej2-react-calendars": "^20.4.48",
+    "@mui/x-date-pickers": "^5.0.20",
+    "@syncfusion/ej2-react-calendars": "^20.4.54",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.3.1",
     "axios": "^1.2.2",
     "dayjs": "^1.11.7",
     "devextreme": "22.2.4",
     "devextreme-react": "22.2.4",
     "material-ui-search-bar": "^1.0.0",
+    "materialui-daterange-picker": "^1.1.92",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.40",
     "package.json": "^2.0.1",
     "react": "^18.2.0",
+    "react-date-range": "^1.4.0",
     "react-datetime-picker": "^4.2.0",
     "react-dom": "^18.2.0",
     "react-material-file-upload": "^0.0.4",
