--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@uc-react-ui/multiselect": "^0.1.1",
     "antd": "^5.3.1",
     "axios": "^1.2.2",
     "dayjs": "^1.11.7",
@@ -32,6 +33,7 @@
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.40",
     "package.json": "^2.0.1",
+    "pondjs": "^0.9.0",
     "react": "^18.2.0",
     "react-date-range": "^1.4.0",
     "react-datetime-picker": "^4.2.0",
@@ -39,6 +41,8 @@
     "react-material-file-upload": "^0.0.4",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.2",
+    "react-timeseries-charts": "^0.16.1",
     "recharts": "^2.4.3",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
