--- a/requirements.txt
+++ b/requirements.txt
@@ -22,19 +22,26 @@ inflection==0.5.1
 itypes==1.2.0
 Jinja2==3.1.2
 loguru==0.6.0
+lxml==4.9.2
 MarkupSafe==2.1.1
+numpy==1.24.2
 packaging==23.0
-psycopg2==2.9.5
+pandas==1.5.3
+psycopg2-binary==2.9.5
 pycparser==2.21
 pyhcl==0.4.4
 PyJWT==2.6.0
+python-dateutil==2.8.2
+python-decouple==3.8
 pytz==2022.7
 requests==2.28.1
 rest-framework-generic-relations==2.1.0
 ruamel.yaml==0.17.21
 ruamel.yaml.clib==0.2.7
 shortuuid==1.0.11
+six==1.16.0
 sqlparse==0.4.3
+tqdm==4.65.0
 uritemplate==4.1.1
 urllib3==1.26.13
 validators==0.20.0
